Add schema validation integration tests