@@ -6,8 +6,9 @@
 
 package io.kroxylicious.proxy.filter.schema;
 
-import java.util.Collections;
+import java.util.Map;
 
+import io.apicurio.registry.resolver.SchemaResolverConfig;
 import io.kroxylicious.proxy.filter.schema.config.BytebufValidation;
 import io.kroxylicious.proxy.filter.schema.config.RecordValidationRule;
 import io.kroxylicious.proxy.filter.schema.config.ValidationConfig;
@@ -61,7 +62,7 @@ public class ProduceValidationFilterBuilder {
 
     private static BytebufValidator toSchemaValidator(BytebufValidation valueRule) {
         return valueRule.getSchemaValidationConfig()
-                .map(config -> BytebufValidators.jsonSchemaValidator(Collections.emptyMap(), config.useApicurioGlobalId()))
+                .map(config -> BytebufValidators.jsonSchemaValidator(Map.of(SchemaResolverConfig.REGISTRY_URL, config.apicurioRegistryUrl()), config.useApicurioGlobalId()))
                 .orElse(BytebufValidators.allValid());
     }
 }
